--- a/ui-style.css
+++ b/ui-style.css
@@ -15,3 +15,25 @@
 	border: none;
 	padding: 0;
 }
+
+.OLSKViewport {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+
+	/* @OLSKViewportFlexbox:Parent */
+	display: flex;
+	flex-direction: column;
+}
+
+@media screen and (max-width: 760px) {
+
+.OLSKViewport {
+  position: fixed;
+
+  overflow: hidden;
+}
+
+}
