--- a/ui-style.css
+++ b/ui-style.css
@@ -1,21 +1,3 @@
-.OLSKLayoutElementTappable {
-	cursor: pointer;
-
-	/* DisableTextSelection */
-	-webkit-touch-callout: none; /* iOS Safari */
-	-webkit-user-select: none; /* Safari */
-	-khtml-user-select: none; /* Konqueror HTML */
-	-moz-user-select: none; /* Firefox */
-	-ms-user-select: none; /* Internet Explorer/Edge */
-	user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
-}
-
-.OLSKLayoutButtonNoStyle {
-	background: none;
-	border: none;
-	padding: 0;
-}
-
 .OLSKViewport {
 	position: absolute;
 	top: 0;
@@ -38,6 +20,44 @@
 
 }
 
+.OLSKToolbarButton {
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+}
+
+.OLSKToolbarButton:disabled {
+	opacity: 0.3;
+}
+
+@media screen and (max-width: 760px) {
+
+.OLSKViewport .OLSKToolbarButton {
+	width: 20px;
+	height: 20px;
+	background-size: 20px 20px;
+}
+
+}
+
+.OLSKLayoutElementTappable {
+	cursor: pointer;
+
+	/* DisableTextSelection */
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+}
+
+.OLSKLayoutButtonNoStyle {
+	background: none;
+	border: none;
+	padding: 0;
+}
+
 .OLSKScreenReaderOnly {
 	width: 0px;
 	height: 0px;
@@ -45,4 +65,8 @@
 	position: absolute;
 	
 	overflow: hidden;
+}
+
+.OLSKMobileSafariSmoothScrolling {
+	-webkit-overflow-scrolling: touch;
 }
