--- a/ui-style.css
+++ b/ui-style.css
@@ -52,6 +52,18 @@
 	user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
 }
 
+.OLSKLayoutElementTextVisual {
+	cursor: default;
+
+	/* DisableTextSelection */
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+}
+
 .OLSKLayoutButtonNoStyle {
 	background: none;
 	border: none;
