Revert "Hide inactive view completely"
This reverts commit d131e7249f66ea971c0a7ab2f6e3e09f40417839.

--- a/ui-style.css
+++ b/ui-style.css
@@ -26,9 +26,8 @@
 }
 
 .OLSKMobileViewInactive {
-	display: none !important;
-	/*position: absolute;*/
-	/*left: -200vw;*/
+	position: absolute;
+	left: -200vw;
 }
 
 .OLSKMobileViewHeader {
