--- a/ui-style.css
+++ b/ui-style.css
@@ -51,6 +51,16 @@
 
 }
 
+/* OLSKVisibility */
+
+@media screen and (min-width: 760px) {
+
+.OLSKVisibilityMobile {
+	display: none !important;
+}
+
+}
+
 /* OLSKToolbar */
 
 .OLSKToolbar {
