--- a/layout.ejs
+++ b/layout.ejs
@@ -16,7 +16,7 @@
 
 	outputData.push(...[
 		`<meta http-equiv="Content-Type" content="text/html; charset=utf-8">`,
-		`<link rel="icon" href="data:;base64,iVBORw0KGgo=">`, // https://stackoverflow.com/questions/1321878/how-to-prevent-favicon-ico-requests
+		`<link rel="icon" href="data:;base64,=">`, // https://stackoverflow.com/questions/1321878/how-to-prevent-favicon-ico-requests
 		]);
 
 	outputData.push(...Object.keys(locals.OLSKPageMetaTags || {}).map(function(e) {
