--- a/layout.ejs
+++ b/layout.ejs
@@ -64,6 +64,23 @@
 		}
 	};
 
+	if (locals.OLSKPagePublicLocalizedStringKeys) {
+		outputData.push(...[
+			'/_shared/__external/OLSKInternational/main.js',
+			'/_shared/__external/OLSKString/main.js',
+			].map(pathToTag));
+		
+		outputData.push(`<script type="text/javascript">
+		window.OLSKFormatted = OLSKString.OLSKStringWithFormat;
+		window.OLSKLocalized = function(translationConstant) {
+			return OLSKInternational.OLSKInternationalLocalizedString(translationConstant, ${ JSON.stringify(OLSKPagePublicLocalizedStringKeys.reduce(function(map, e) {
+					map[e] = OLSKLocalized(e);
+					return map;
+				}, {})) });
+		};
+	</script>`);
+	}
+
 	if (locals.OLSKPagePublicRouteKeys) {
 		outputData.push(...[
 			'/_shared/__external/OLSKRouting/main.js',
