Extract OLSK_LAYOUT_FAVICON_URL

--- a/layout.ejs
+++ b/layout.ejs
@@ -47,9 +47,11 @@
 </script>`)
 	};
 
-	if (locals.OLSKPageBlankFavicon || process.env.NODE_ENV === 'development') {
+	if (process.env.OLSK_LAYOUT_FAVICON_URL) {
+		outputData.push(`<link rel="icon" href="${ process.env.OLSK_LAYOUT_FAVICON_URL }">`);
+	} else if (locals.OLSKPageBlankFavicon || process.env.NODE_ENV === 'development') {
 		outputData.push(`<link rel="icon" href="data:;base64,=">`); // https://stackoverflow.com/questions/1321878/how-to-prevent-favicon-ico-requests
-	};
+	}
 
 	if (locals.OLSKPageTouchIconURL) {
 		outputData.push(`<link rel="apple-touch-icon" href="${ locals.OLSKPageTouchIconURL }">`);
