--- a/main.ejs
+++ b/main.ejs
@@ -18,6 +18,10 @@
 		`<meta http-equiv="Content-Type" content="text/html; charset=utf-8">`,
 		]);
 
+	outputData.push(...[
+		`<meta name="viewport" content="${ locals.OLSKPageMetaViewport || 'width=device-width' }">`,
+		]);
+
 	outputData.push(...Object.keys(locals.OLSKPageMetaTags || {}).map(function(e) {
 		return `<meta name="${ e }" content="${ locals.OLSKPageMetaTags[e] }">`;
 	}));
