--- a/main.ejs
+++ b/main.ejs
@@ -31,7 +31,7 @@
 	}
 
 	outputData.push(...(locals.OLSKSharedPageLanguagesAvailable || []).map(function (e) {
-		return `<link rel="alternate" hreflang="${ e }" href="${ OLSKCanonicalLocalizedFor(OLSKSharedActiveRouteConstant, {
+		return `<link rel="alternate" hreflang="${ e }" href="${ OLSKCanonicalLocalized(OLSKSharedActiveRouteConstant, {
 			OLSKRoutingLanguage: e,
 		}) }" />`;
 	}));
