--- a/ui-style.css
+++ b/ui-style.css
@@ -520,6 +520,7 @@ a.OLSKCommonButton {
 
 .OLSKCommonCard > img {
 	--OLSKCommonCardImageSize: 70px;
+
 	width: var(--OLSKCommonCardImageSize);
 	min-width: var(--OLSKCommonCardImageSize);
 
@@ -530,7 +531,6 @@ a.OLSKCommonButton {
 	display: block;
 	
 	font-weight: bold;
-	font-family: var(--OLSKCommonHeadingFontFamily);
 }
 
 /* OLSKCommonIdentityCard */
@@ -540,6 +540,7 @@ a.OLSKCommonButton {
 }
 
 .OLSKCommonIdentityCard > :last-child > :nth-child(1) {
+	font-family: var(--OLSKCommonHeadingFontFamily);
 	font-size: 24pt;
 }
 
@@ -551,11 +552,12 @@ a.OLSKCommonButton {
 
 .OLSKCommonFeatureCard {
 	margin: 1em 0;
+}
 
-	font-size: 10.5pt;
+.OLSKCommonFeatureCard > img {
+	--OLSKCommonCardImageSize: 54px;
 }
 
 .OLSKCommonFeatureCard > :last-child > :nth-child(1) {
 	font-family: unset;
-	font-size: 13pt;
 }
