--- a/ui-style.css
+++ b/ui-style.css
@@ -638,6 +638,9 @@ a.OLSKCommonButton {
 	width: 50%;
 	padding: 5px 7px;
 	border: 1px solid var(--OLSKCommonEdgeColor);
+}
+
+.OLSKCommonForm input[type=text] {
 	line-height: 1.7;
 }
 
